# advent-of-code-2021

./: .gitignore  Cargo.toml  Makefile  README.md  data_upload.py  rust-toolchain.toml
.vim-lsp-settings/: settings.json
src/: lib.rs  logging.rs  runtime.rs  solutions.rs
src/usb_io/: mod.rs  writer.rs
src/utils/: container.rs  mod.rs  tools.rs  usb_input.rs
