[package]
name = "aoc21"
version = "0.1.0"
authors = ["Elisabeth S. Friedrich <elisabeth.s.friedrich@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.3"
# Remove me if you don't want logging
log = "0.4.11"
teensy4-panic = { version = "0.2.0", default-features = false }
heapless = "0.7.8"
alloc-cortex-m = "0.4.1"
num-traits={ version = "0.2.14", default-features = false }
tuple = { version = "0.5.1", default-features = false }
itertools = { version = "0.10.0", default-features = false, features = ["use_alloc"] }

[dependencies.teensy4-bsp]
version = "0.2"
features = ["rt"]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0

[profile.dev]
opt-level = 2
